[gd_scene load_steps=3 format=3 uid="uid://xt236ukuaf8g"]

[ext_resource type="Script" uid="uid://cw4w5xu7il726" path="res://Scenes/Player/player_alt.gd" id="1_pbtr8"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ckaed"]
radius = 54.0
height = 246.0

[node name="player_alt" type="CharacterBody2D"]
position = Vector2(177, 325)
script = ExtResource("1_pbtr8")
move_speed_pixels = 10

[node name="Positioning" type="Node2D" parent="."]

[node name="LeftArm" type="Node2D" parent="Positioning"]
position = Vector2(58, -13)

[node name="LeftLeg" type="Node2D" parent="Positioning"]

[node name="Torso" type="Node2D" parent="Positioning"]

[node name="RightLeg" type="Node2D" parent="Positioning"]

[node name="RightArm" type="Node2D" parent="Positioning"]

[node name="Head" type="Node2D" parent="Positioning"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_ckaed")
